modified chat UI

--- a/ChatWave/Auth/templates/login/loginbase.html
+++ b/ChatWave/Auth/templates/login/loginbase.html
@@ -36,7 +36,7 @@
     .left-side {
         flex: 1;
         position: relative;
-        background: url('https://cdn.discordapp.com/attachments/958193242892042261/1312447415588093952/bb606a9d4289f9ac86ed2852789b4807.png?ex=674d3027&is=674bdea7&hm=cfb322b859fa0600b499ee40e48c604a6bee7e5c616e6f973ab64c91767d54a2&');
+        background: url('https://media.discordapp.net/attachments/958193242892042261/1312454950034608168/sunset.png?ex=675914ac&is=6757c32c&hm=cd5f2ee9e08021e9615f73a488dcb4f57d39f8a3488321b9dd9b1de149da2705&=&format=webp&quality=lossless');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -277,12 +277,12 @@
                   {% csrf_token %}
                   <div class="form-group">
                       <label for="username">Username</label>
-                      <input type="text" name="username" id="username" required autocomplete="username">
+                      <input placeholder = "Enter your username" type="text" name="username" id="username" required autocomplete="username">
                   </div>
 
                   <div class="form-group">
                       <label for="password">Password</label>
-                      <input type="password" name="password" id="password" required autocomplete="current-password">
+                      <input placeholder = "Enter your password" type="password" name="password" id="password" required autocomplete="current-password">
                   </div>
 
                   <div class="form-options">
