--- a/ChatWave/Chat/templates/chat/chat.html
+++ b/ChatWave/Chat/templates/chat/chat.html
@@ -68,17 +68,30 @@
                 {% if message.sender.username != request.user.username%}
 
                 <div class="message">
-                    <div class="user">{{ message.sender.username }} </div>
-                    {{ message.message }}
-                    <div class="timestamp">{{ message.created|date:"h:i A" }}</div>
+                    <img src="https://i.pinimg.com/736x/4c/d2/a6/4cd2a6615820a4a15f4d85de7762251d.jpg" alt="userimage">
+                    <div class="user"> <a id="messageUsername" href="{%url 'profile' message.sender.username %}">{{ message.sender.username }} </a>
+                        <div class="timestamp">{{ message.created|date:"h:i A" }}
+                            <h3 class="text-message"> {{ message.message }} </h3>
+                        </div>
+                        
+                    </div>
+                   
+
+                
+                    
                 </div>
 
                
                 {% else %}
                 <div class="message sent">
-                    <div class="user">You</div>
-                    {{ message.message }}
-                    <div class="timestamp">{{ message.created|date:"h:i A" }}</div>
+                    <img src="https://i.pinimg.com/736x/4c/d2/a6/4cd2a6615820a4a15f4d85de7762251d.jpg" alt="userimage">
+                    <div class="user">You
+                        <div class="timestamp">{{ message.created|date:"h:i A" }}
+                            <h3> {{ message.message }} </h3>
+                        </div>
+                    </div>
+           
+                   
                 </div>
 
                 {% endif %}
@@ -309,6 +322,14 @@
            
             scrollToBottom();
 
+
+            function escapeHTML(html) {
+                const div = document.createElement('div');
+                div.innerText = html;
+                return div.innerHTML;
+            }
+            
+
             function sendMessage() {
                 const messageInput = document.querySelector('.input-area input');
                 const message = messageInput.value.trim();
@@ -323,11 +344,13 @@
                     }));
                     
                     const time = new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-                    
+                    const sanitizedMessage = escapeHTML(message);
                     newMessage.innerHTML = `
-                        <div class="user">You</div>
-                        ${message}
+                    <img src="https://i.pinimg.com/736x/4c/d2/a6/4cd2a6615820a4a15f4d85de7762251d.jpg" alt="userimage">
+                        <div class="user">You
                         <div class="timestamp">${time}</div>
+                       <h3> ${sanitizedMessage} </h3>
+                        </div>
                     `;
                     
                     chatMessages.appendChild(newMessage);
@@ -377,7 +400,7 @@
            
             chatSocket.onmessage = function(e) {
                 const data = JSON.parse(e.data);
-                console.log(data)
+                {% comment %} console.log(data) {% endcomment %}
                 
                 if (data.type === 'songResult') {
                     if (data.songResult == "Present") {
@@ -454,19 +477,12 @@
 
 
 
-        const searchBtn = document.querySelector('.side-nav button:nth-child(2)');
-        const searchModal = document.getElementById('searchModal');
-        const searchInput = document.querySelector('.search-input');
-
-        searchBtn.addEventListener('click', () => {
-            searchModal.classList.toggle('active');
-            searchInput.focus();
-        });
-
+        
+    
 
         
 
-        const settingsBtn = document.querySelector('.side-nav button:nth-child(3)');
+        const settingsBtn = document.querySelector('.side-nav button:nth-child(2)');
         const settingsModal = document.getElementById('settingsModal');
         const closeSettingsBtn = settingsModal.querySelector('.modal-close');
 
@@ -476,16 +492,19 @@
 
         closeSettingsBtn.addEventListener('click', () => {
             settingsModal.classList.remove('active');
-        });
+        }); 
 
         const profileBtn = document.querySelector('.profile-button');
         profileBtn.addEventListener('click', () => {
+            
             const username = "{{ request.user.username }}"
             
             window.location.href = window.location.origin + "/account/" + username ;
         });
         
-        });
+
+        
+        
 
 
         const attachmentBtn = document.querySelector('.input-actions button:nth-child(3)');
@@ -528,7 +547,7 @@
         });
 
 
-        
+    });
     
     </script>
 </body>
