--- a/ChatWave/Chat/templates/chat/chat.html
+++ b/ChatWave/Chat/templates/chat/chat.html
@@ -68,7 +68,7 @@
                 {% if message.sender.username != request.user.username%}
 
                 <div class="message">
-                    <img src="https://i.pinimg.com/736x/4c/d2/a6/4cd2a6615820a4a15f4d85de7762251d.jpg" alt="userimage">
+                    <img src={{message.sender.profilePicture}} alt="userimage">
                     <div class="user"> <a id="messageUsername" href="{%url 'profile' message.sender.username %}">{{ message.sender.username }} </a>
                         <div class="timestamp">{{ message.created|date:"h:i A" }}
                             <h3 class="text-message"> {{ message.message }} </h3>
@@ -84,7 +84,7 @@
                
                 {% else %}
                 <div class="message sent">
-                    <img src="https://i.pinimg.com/736x/4c/d2/a6/4cd2a6615820a4a15f4d85de7762251d.jpg" alt="userimage">
+                    <img src="{{request.user.profilePicture}}" alt="userimage">
                     <div class="user">You
                         <div class="timestamp">{{ message.created|date:"h:i A" }}
                             <h3> {{ message.message }} </h3>
@@ -346,7 +346,7 @@
                     const time = new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
                     const sanitizedMessage = escapeHTML(message);
                     newMessage.innerHTML = `
-                    <img src="https://i.pinimg.com/736x/4c/d2/a6/4cd2a6615820a4a15f4d85de7762251d.jpg" alt="userimage">
+                    <img src={{request.user.profilePicture}} alt="userimage">
                         <div class="user">You
                         <div class="timestamp">${time}</div>
                        <h3> ${sanitizedMessage} </h3>
