--- a/ChatWave/Profile/templates/songplayer.html
+++ b/ChatWave/Profile/templates/songplayer.html
@@ -37,6 +37,18 @@
                 </a>
             </div>
         {% endfor %}
+
+        {% else %}
+        <div class="song-item">
+         
+            <div class="song-info">
+            <h3>No Songs Yet</h3>
+            <p>Your favorite songs will appear here once you start liking them during your chat. Each playlist is organized by genre, and songs are selected based on the sentiment of your messages.</p>
+        </div>
+
+        </div>
+
+
     {% endif %}
     
 
