--- a/ChatWave/Chat/templates/chat/chat.html
+++ b/ChatWave/Chat/templates/chat/chat.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load custom_filters %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -56,12 +57,18 @@
                 <div class="room-category">
                     <h3>Other</h3>
                     
-                    {%for ChatRooms in ChatRoomOther%}
-                        {%if ChatRooms.category == "Other" %}
-                    <a href="{% url 'chatViewLogic' chatroom=ChatRooms.room_name %}"><div class="room-item">{{ChatRooms.room_name}}</div></a>
+                    {% for ChatRoom in ChatRoomOther %}
+                    {% if "Other" in ChatRoom.category %}
 
-                    {%endif%}
-                    {%endfor%}
+                        {% if request.user.username in ChatRoom.allowed %}
+
+                            <a href="{% url 'chatViewLogic' chatroom=ChatRoom.room_name %}">
+                                <div class="room-item">{{ ChatRoom.room_name|replace_underscore }}</div>
+                            </a>
+                        {% endif %}
+                    {% endif %}
+                {% endfor %}
+                
                    
                 </div>
            
@@ -358,14 +365,14 @@
             const sendButton = document.querySelector('.input-area .input-actions button:last-child');
             const messageInput = document.querySelector('.input-area input');
 
-            document.addEventListener('keypress', (e) => {
+            {% comment %} document.addEventListener('keypress', (e) => {
                 if (e.key == "/") {
                     const searchInput = document.querySelector('.input-area input');
                     e.preventDefault();
                     searchInput.focus();
                 }
             });
-            
+             {% endcomment %}
             sendButton.addEventListener('click', sendMessage);
             messageInput.addEventListener('keypress', (e) => {
                 if (e.key === 'Enter') {
@@ -397,11 +404,15 @@
 
             function sendMessage() {
                 const message = messageInput.value.trim();
-                
+                const chat_room = "{{chat_room}}"
                 if (message) {
 
+                    
+
                     chatSocket.send(JSON.stringify({
-                        'message': message
+                        
+                        'message': message,
+                        'ChatRoom': chat_room
                     }));
                     
                     messageInput.value = '';
@@ -422,6 +433,18 @@
                     
                     }
                 }
+
+                else if (data.type == "add_update"){
+                    addUserResult = data.addUserResult
+                    alert(addUserResult)
+
+                }
+                else if (data.type == "remove_update") {
+                    removeUserResult = data.removeUserResult
+                    alert(removeUserResult)
+                }
+
+
                 else if (data.type === "delete_message") {
                     
 
